# tkinter_spheres_environment_gui

./: README.md  pyproject.toml  setup.cfg
data/: test_gui-baseline-1.ps  test_gui-box-3.ps  test_gui-circle-2.ps  test_gui-triangle-4.ps  test_package-baseline-1.ps  test_package-cursor-2.ps  test_package-cursor-3.ps  test_package-target-4.ps  test_package-target-5.ps  test_package-target-6.ps  test_sphere-baseline-1.ps  test_sphere-initialization-2.ps  test_sphere-position-4.ps  test_sphere-radius-3.ps
data/images/: reference_image_0.ps  reference_image_1.ps  reference_image_2.ps  reference_image_3.ps  reference_image_4.ps  reference_image_5.ps
doc/markdown/: testing.md
test/: __init__.py  fixtures.py  test_gui.py  test_package.py  test_sphere.py  test_tkinter_spheres_environment_gui.py  tkinter_canvas_postscript.py
tkinter_spheres_environment_gui/: __init__.py  environment.py  gui.py  sphere.py
