[project]
name = "tkinter_spheres_environment_gui"
description = "Simple tkinter wrappers intended to facilitate manipulation of shapes and polygons rendered on a canvas."
authors = [
  {name='a.whit', email='nml@whit.contact'},
]
readme="README.md"
license = { file="LICENSE.txt" }
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
]
dynamic =["version" ]

[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/ricmua/tkinter_spheres_environment_gui"

[tool.setuptools_scm]

