[metadata]
name = tkinter_spheres_environment_gui
version = attr: tkinter_spheres_environment_gui.__version__
description = Tkinter-based 2D graphical interface for a virtual environment in which spherical objects interact in a 3D space.
long_description = file: README.md, LICENSE
keywords = 
license = Mozilla Public License 2.0
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    
[options]
packages = tkinter_spheres_environment_gui
install_requires =
    requests
    importlib-metadata; python_version < "3.8"


